<resources>
    <string name="app_name">ImportacionesDominguez</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_product_detail">Product Detail Fragment</string>
    <string name="menu_shopping_cart">Shopping Cart Fragment</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="wrap_content">wrap_content</string>

    <!-- Bottom Menu -->
    <string name="action_home">Inicio</string>
    <string name="action_user">Perfil</string>
    <string name="action_favorite">Favoritos</string>
    <string name="action_search">Buscar</string>
    <string name="action_cart">Carrito</string>
    <string name="action_profile">Mi cuenta</string>
    <string name="logo_title">Logo</string>
    <string name="txt_input_search">Buscar</string>
    <string name="txt_image_banner">Image Banner</string>
    <string name="txt_image_product">Image Product</string>
    <string name="txt_login">¡Hola! \nInicia Sesión</string>
    <string name="txt_tilEmail">Ingresa tu correo electrónico</string>
    <string name="txt_tilPassword">Ingresa tu contraseña</string>
    <string name="txt_lbl_forgotPassword">¿Haz olvidado tu contraseña?</string>
    <string name="btn_txt_login">Iniciar</string>
    <string name="txt_lbl_email">Correo electrónico</string>
    <string name="txt_lbl_password">Contraseña</string>
    <string name="txt_btn_register">Registrarme</string>
    <string name="txt_not_account">¿Aún no tienes cuenta?</string>
    <string name="txt_appbar_register">Regístrate</string>
    <string name="txt_to_back">Retroceso</string>
    <string name="info_register">Ingresa tus datos personales y disfruta de una experiencia de compra más rápida.</string>
    <string name="txt_lbl_name">Nombre</string>
    <string name="txt_tilName">Ingresa tu nombre</string>
    <string name="txt_lbl_lastName">Apellidos</string>
    <string name="txt_tilLastNames">Ingresa tu apellido</string>
    <string name="txt_lbl_address">Dirección</string>
    <string name="txt_tilAddress">Ingresa tu dirección</string>
    <string name="txt_lbl_phone">Celular</string>
    <string name="txt_tilPhone">Ingresa tu número de celular</string>
    <string name="txt_terms_privacy">Acepto los término y condiciones de Importaciones Dominguez y autorizo la politica de privacidad.</string>
    <string name="txt_register">Regístrate</string>
    <string name="txt_button_cart">Agregar</string>
    <string name="txt_ic_hamburger">menu_hamburger</string>
    <string name="txt_required">Campo Requerido</string>
    <string name="txt_required_field">Campo Requerido</string>
    <string name="txt_myProfile">Mi perfil</string>
    <string name="txt_menu_logout">Cerrar Sesión</string>
    <string name="txt_menu_compras">Mis compras</string>
    <string name="txt_menu_datos_personales">Datos Personales</string>
    <string name="txt_menu_payment">Medios de Pago</string>
    <string name="txt_menu_configurar_cuenta">Configurar cuenta</string>
    <string name="txt_errorname_label">El nombre no puede ser vacío</string>
    <string name="txt_errorlastname_label">El apellido no puede ser vacío</string>
    <string name="txt_erroremail_label">El email no puede ser vacío</string>
    <string name="txt_errorpassword_label">La contraseña no puede ser vacía</string>
    <string name="txt_errortelefono_label">El teléfono no puede ser vacío</string>
    <string name="txt_erroraddress_label">La dirección no puede ser vacía</string>
    <string name="txt_lbl_sexo">Tipo Sexo</string>
    <string name="txt_lbl_documento">Tipo Documento</string>
    <string name="txt_lbl_numero_documento">N° Documento</string>
    <string name="txt_tilNumeroDocumento">Ingresa tu número documento</string>
    <string name="txt_errornumero_documento_label">El número de documento no puede ser vacio</string>
    <string name="txt_title_checkout_cart">Carrito de compras</string>
    <string name="txt_name_categories">Name Categories</string>
    <string name="txt_productos_favoritos">Productos Favoritos</string>
    <string name="marca_del_producto">Marca del producto</string>
    <string name="txt_favorite_precio">Precio:</string>
    <string name="txt_max_quantity">Máximo 10 unidades</string>
    <string name="txt_number_counter_cart">1</string>
    <string name="txt_checkout">Continuar compra</string>
    <string name="txt_label_envio">Envio</string>
    <string name="txt_label_cantidad_productos">Cantidad Productos</string>
    <string name="txt_lbl_subtotal">Sub total</string>
    <string name="txt_lbl_total">Total: </string>
    <string name="txt_tipo_y_dia_de_entrega">Tipo y día de entrega</string>
    <string name="txt_envio_domicilio">Envío a domicilio</string>
    <string name="txt_cambiar_fecha">Cambiar Fecha</string>
    <string name="txt_costo_envio">Costo de envío: </string>
    <string name="txt_payment">Ir a pagar</string>
    <string name="txt_checkout_title">Elige el tipo y fecha de entrega</string>
    <string name="txt_horario">De 8 a 20h</string>
    <string name="txt_lbl_subTotal">"Sub Total: "</string>
</resources>