<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/homeFragment"
        android:title="@string/action_home"
        android:icon="@drawable/ic_home"/>

  <item
        android:id="@+id/cartFragment"
        android:title="@string/action_cart"
        android:icon="@drawable/ic_cart"/>
    <item
        android:id="@+id/favoritesFragment"
        android:title="@string/action_favorite"
        android:icon="@drawable/ic_favorite"/>

    <item
        android:id="@+id/profileFragment"
        android:title="@string/action_profile"
        android:icon="@drawable/ic_profile"/>

    <item
        android:id="@+id/menuClientFragment"
        android:title="@string/txt_myProfile"
        android:visible="false"
        android:icon="@drawable/ic_profile"/>
</menu>