<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.login.view.LoginFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_margin_xxlarge"
            android:layout_marginTop="100dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="130dp"
                android:layout_height="80dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/txt_image_banner"
                android:src="@drawable/logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/lato_black"
                android:text="@string/txt_login"
                android:textColor="#333333"
                android:textSize="@dimen/font_size_xlarge" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_margin_xxlarge"
                android:layout_marginTop="@dimen/dimen_margin_large"
                android:text="@string/txt_lbl_email"
                android:textColor="#333333"
                android:textSize="@dimen/font_size_small" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_padding_xxlarge"
                android:layout_marginTop="@dimen/dimen_padding_medium"
                android:autofillHints="no"
                android:background="@android:color/transparent"
                android:ems="8"
                android:textColor="#333333"
                android:textColorHint="#333333"
                android:textSize="@dimen/font_size_medium"
                tools:ignore="TextFields">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiedTxtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/txt_tilEmail"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textColor="#333333"
                    android:textSize="@dimen/font_size_medium" />

                <TextView
                    android:id="@+id/emailTextError"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/dimen_margin_medium"
                    android:layout_marginStart="@dimen/dimen_margin_medium"
                    android:fontFamily="@font/lato_regular"
                    android:text="@string/txt_required_field"
                    android:visibility="gone"
                    android:textColor="#FF0000" />

            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_margin_xxlarge"
                android:layout_marginTop="@dimen/dimen_margin_large"
                android:text="@string/txt_lbl_password"
                android:textColor="#333333"
                android:textSize="@dimen/font_size_small" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_margin_xxlarge"
                android:layout_marginTop="@dimen/dimen_margin_medium"
                android:autofillHints="no"
                android:ems="8"
                android:textColor="#333333"
                android:textColorHint="#333333"
                android:textSize="@dimen/font_size_medium"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="#333333"
                tools:ignore="TextFields">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiedTxtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/txt_tilPassword"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="#333333"
                    android:textSize="@dimen/font_size_medium" />

                <TextView
                    android:id="@+id/passwordTextError"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/dimen_margin_medium"
                    android:layout_marginStart="@dimen/dimen_margin_medium"
                    android:fontFamily="@font/lato_regular"
                    android:text="@string/txt_required_field"
                    android:textColor="#FF0000"
                    android:visibility="gone" />


            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_login"
                style="@android:style/Widget.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_margin_xxlarge"
                android:layout_marginTop="@dimen/dimen_margin_xxlarge"
                android:layout_marginBottom="@dimen/dimen_margin_large"
                android:background="@drawable/btn_login"
                android:padding="@dimen/dimen_padding_large"
                android:text="@string/btn_txt_login"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size_large" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="@dimen/dimen_margin_xxlarge"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="O" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/dimen_margin_medium"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/dimen_margin_medium"
                        android:text="@string/txt_not_account" />

                    <TextView
                        android:id="@+id/txt_register"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/lato_black"
                        android:text="@string/txt_register" />
                </LinearLayout>


            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/dimen_margin_large"
                android:layout_marginStart="@dimen/dimen_margin_xxlarge"
                android:layout_marginEnd="@dimen/dimen_margin_xlarge"
                android:fontFamily="@font/lato_regular"
                android:text="@string/txt_lbl_forgotPassword"
                android:textAlignment="center" />


        </LinearLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>