<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.register.view.RegisterFragment">

    <LinearLayout
        android:id="@+id/llTopBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_margin_large"
            android:contentDescription="@string/txt_to_back"
            android:src="@drawable/ic_back_arrow"
            app:layout_constraintBottom_toBottomOf="@+id/coordinatorLayout"
            app:layout_constraintStart_toStartOf="@+id/coordinatorLayout"
            app:layout_constraintTop_toTopOf="@+id/coordinatorLayout" />


        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/coordinatorLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/app_bar">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_scrollFlags="enterAlways"
                    app:title="@string/txt_appbar_register"
                    app:titleMarginStart="@dimen/dimen_margin_xxxlarge"
                    app:titleTextColor="@color/color_secondary" />
            </com.google.android.material.appbar.AppBarLayout>


        </androidx.coordinatorlayout.widget.CoordinatorLayout>

    </LinearLayout>


    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/dimen_margin_large"
        android:layout_marginVertical="60dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llTopBar">

        <LinearLayout
            android:id="@+id/llRegister"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="100dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_regular"
                    android:text="@string/info_register"
                    android:textSize="@dimen/font_size_medium" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_lbl_name"
                    android:textColor="@color/color_secondary"
                    android:textSize="@dimen/font_size_small" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/editTextName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_padding_medium"
                    android:autofillHints="no"
                    android:background="@android:color/transparent"
                    android:ems="8"
                    android:textColor="@color/color_secondary"
                    android:textColorHint="@color/color_secondary"
                    android:textSize="@dimen/font_size_medium"
                    tools:ignore="TextFields">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tiedTxtName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="@string/txt_tilName"
                        android:inputType="textPersonName"
                        android:maxLines="1"
                        android:paddingStart="@dimen/dimen_padding_medium"
                        android:paddingEnd="0dp"
                        android:textColor="@color/color_secondary"
                        android:textSize="@dimen/font_size_medium" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_margin_large"
                    android:text="@string/txt_lbl_lastName"
                    android:textColor="@color/color_secondary"
                    android:textSize="@dimen/font_size_small" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/editTextLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_margin_medium"
                    android:autofillHints="no"
                    android:ems="8"
                    android:textColor="@color/color_secondary"
                    android:textColorHint="@color/color_secondary"
                    android:textSize="@dimen/font_size_medium"
                    app:passwordToggleTint="@color/color_secondary"
                    tools:ignore="TextFields">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tiedTxtLastName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="@string/txt_tilLastNames"
                        android:inputType="textPersonName"
                        android:maxLines="1"
                        android:paddingStart="@dimen/dimen_padding_medium"
                        android:paddingEnd="0dp"
                        android:textColor="@color/color_secondary"
                        android:textSize="@dimen/font_size_medium" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_margin_large"
                    android:text="@string/txt_lbl_email"
                    android:textColor="#333333"
                    android:textSize="@dimen/font_size_small" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/editTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_padding_medium"
                    android:autofillHints="no"
                    android:background="@android:color/transparent"
                    android:ems="8"
                    android:textColor="#333333"
                    android:textColorHint="#333333"
                    android:textSize="@dimen/font_size_medium"
                    tools:ignore="TextFields">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tiedTxtEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="@string/txt_tilEmail"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:paddingStart="@dimen/dimen_padding_medium"
                        android:paddingEnd="0dp"
                        android:textColor="#333333"
                        android:textSize="@dimen/font_size_medium" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_margin_large"
                    android:text="@string/txt_lbl_address"
                    android:textColor="@color/color_secondary"
                    android:textSize="@dimen/font_size_small" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/editTextAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_margin_medium"
                    android:autofillHints="no"
                    android:ems="8"
                    android:textColor="@color/color_secondary"
                    android:textColorHint="@color/color_secondary"
                    android:textSize="@dimen/font_size_medium"
                    app:passwordToggleTint="@color/color_secondary"
                    tools:ignore="TextFields">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tiedTxtAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="@string/txt_tilAddress"
                        android:inputType="textPersonName"
                        android:maxLines="1"
                        android:paddingStart="@dimen/dimen_padding_medium"
                        android:paddingEnd="0dp"
                        android:textColor="@color/color_secondary"
                        android:textSize="@dimen/font_size_medium" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_margin_large"
                    android:text="@string/txt_lbl_phone"
                    android:textColor="@color/color_secondary"
                    android:textSize="@dimen/font_size_small" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/editTextPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_margin_medium"
                    android:autofillHints="no"
                    android:ems="8"
                    android:textColor="@color/color_secondary"
                    android:textColorHint="@color/color_secondary"
                    android:textSize="@dimen/font_size_medium"
                    app:passwordToggleTint="@color/color_secondary"
                    tools:ignore="TextFields">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tiedTxtPhone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="@string/txt_tilPhone"
                        android:inputType="textPersonName"
                        android:maxLines="1"
                        android:paddingStart="@dimen/dimen_padding_medium"
                        android:paddingEnd="0dp"
                        android:textColor="@color/color_secondary"
                        android:textSize="@dimen/font_size_medium" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_margin_large"
                    android:text="@string/txt_lbl_password"
                    android:textColor="#333333"
                    android:textSize="@dimen/font_size_small" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/editTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_margin_medium"
                    android:autofillHints="no"
                    android:ems="8"
                    android:textColor="#333333"
                    android:textColorHint="#333333"
                    android:textSize="@dimen/font_size_medium"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="#333333"
                    tools:ignore="TextFields">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tiedTxtPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="@string/txt_tilPassword"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:paddingVertical="20dp"
                        android:paddingStart="@dimen/dimen_padding_medium"
                        android:paddingEnd="0dp"
                        android:textColor="#333333"
                        android:textSize="@dimen/font_size_medium" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/font_size_large"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/txt_terms_privacy" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/chkTermsPrivacy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp" />

            </LinearLayout>

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/dimen_margin_large"
                android:background="@drawable/btn_login"
                android:text="@string/txt_btn_register"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size_large" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>